force-app/main/default/objects/Platform_Unit_of_Work_Config__mdt/Platform_Unit_of_Work_Config__mdt.object-meta.xml
<CustomObject>
    <label>Platform Unit of Work Config</label>
    <pluralLabel>Platform Unit of Work Configs</pluralLabel>
</CustomObject>