force-app/main/default/objects/Platform_Unit_of_Work_Config__mdt/fields/has_Next__c.field-meta.xml
<CustomField>
    <fullName>has_Next__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has Next</label>
    <type>Checkbox</type>
</CustomField>