force-app/main/default/objects/Platform_Unit_of_Work_Config__mdt/fields/Ignore_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Ignore_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignore Eligible</label>
    <type>Checkbox</type>
</CustomField>