force-app/main/default/objects/Platform_Unit_of_Work_Config__mdt/fields/Max_Size__c.field-meta.xml
<CustomField>
    <fullName>Max_Size__c</fullName>
    <label>Max Size</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>